--- a/style/style.css
+++ b/style/style.css
@@ -4,37 +4,56 @@
 }
 .contener{
     background-image: url(../src/benar.jpg);
+    width: 100%;
+    height: 700px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 nav{
     display: flex;
-    /* margin: auto; */
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    justify-content: space-between;
+}
+nav img{
+    padding-left: 50px;
 }
 ul {
     list-style: none;
-    padding-left: 50%;
+    padding-right: 70px;
 }
 nav ul li{
     float: right;
     
 }
 nav ul li a{
-    padding: 20px 30px 0;
+    padding: 20px;
     text-decoration: none;
     display: inline-block;
     position: relative;
+    color: rgb(7, 24, 80);
 }
 nav ul li a::before{
     position: absolute;
     content: '';
-    bottom: 0;
+    bottom: 10px;
     left: 0;
-    height: 2px;
+    height: 5px;
     width: 0;
-    background-color: aquamarine;
+    background-color: rgb(7, 24, 80);
     transition: 0.5s;
     
 }
 nav ul li a:hover::before{
     width: 100%;
 
+}
+.benar{
+    text-align: center;
+}
+.benar p{
+    text-align: center;
+    width: 50%;
 }
