--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,38 @@ nav ul li a:hover::before{
     padding: 12px 50px;
     border-radius: 20px;
 }
+
+/* secend section */
+
+.secend-section{
+    display: flex;  
+}
+.first-part{
+    width: 50%;
+    height: 700px;
+    background-color: #DFF6F8;
+    text-align: center;
+}
+
+.first-part p{
+    width: 50%;
+    margin: auto;
+    padding-top: 10px;
+}
+
+.first-part h2{
+    margin: auto;
+    padding-top: 30%;
+}
+
+.secend-part{
+    width: 50%;
+    height: 700px;
+}
+.secend-part img{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
