--- a/style/style.css
+++ b/style/style.css
@@ -125,9 +125,13 @@ nav ul li a:hover::before{
 
 .third-section{
     width: 100%;
-    height: 500px;
+    height: 700px;
     background-color: rgba(63, 51, 108, 0.771);
     position: relative;
+    background-image: url(../src/footer.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .part{
     width: 30%;
@@ -147,3 +151,12 @@ nav ul li a:hover::before{
     right: 60%;
 }
 
+.part img {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50px;
+    
+}
